--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 h1 {
   font-size: 64px;
   margin-bottom: 0;
-  background: url("https://t4.ftcdn.net/jpg/03/53/31/69/360_F_353316914_m15Upk3Q32k9TAofycnosWeWRJOQ5Cmi.jpg")
+  background: url("img/bg.jpg")
     center/cover;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
