--- a/style.css
+++ b/style.css
@@ -281,58 +281,40 @@ h2 {
 }
 @media (max-width: 600px) {
   .profile-header {
-    max-width: 100%;
-    padding: 0 2vw;
+    max-width: 100vw;
+    padding: 0;
   }
   .main-banner {
-    height: 70px;
-    border-radius: 10px 10px 0 0;
+    height: 150px;      /* Lebih besar dari sebelumnya */
+    border-radius: 14px 14px 0 0;
   }
   .main-avatar {
-    width: 70px;
-    height: 70px;
+    width: 100px;        /* Perbesar avatar */
+    height: 100px;
+    border-width: 3px;
   }
   .avatar-wrapper {
-    bottom: -35px;
+    bottom: -45px;
   }
   .main-content > h1 {
-    margin-top: 40px;
-    font-size: 1.5rem;
-  }
-  .main-content > h2 {
-    font-size: 1.1rem;
-    margin-bottom: 24px;
-  }
-  .section {
-    width: 100%;
-    max-width: 100vw;
-    padding: 0 2vw;
+    margin-top: 55px;
+    font-size: 2rem;
   }
   .btn-group {
     flex-direction: column;
-    gap: 10px;
+    gap: 14px;
     align-items: stretch;
+    width: 100%;
+    padding: 0 4vw;
+  }
+  .btn-wrapper {
     width: 100%;
   }
   .btn {
     width: 100%;
+    font-size: 1.1rem;
     justify-content: center;
-    font-size: 1rem;
-  }
-  .popup .banner {
-    height: 50px;
-  }
-  .popup-content {
-    padding: 0.7rem;
-  }
-  .avatar {
-    width: 36px;
-    height: 36px;
-    margin-top: -18px;
-  }
-  .site-footer {
-    font-size: 0.85rem;
-    padding: 1.2rem 0 0.7rem 0;
+    box-sizing: border-box;
   }
 }
 @media (max-width: 400px) {
